k8s/policies/validate-task-request-properties/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequestProperties
metadata:
  name: validate-task-request-properties
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["policydriven.unimi.it"]
        kinds: ["TaskRequest"]
